--- a/pooling-service/sabina_tmp/in_progress/make_new_kernel_gpflow_experiment.ipynb
+++ b/pooling-service/sabina_tmp/in_progress/make_new_kernel_gpflow_experiment.ipynb
@@ -2,8 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.6.3 |Anaconda custom (64-bit)| (default, Oct 13 2017, 12:02:49) \n",
+      "[GCC 7.2.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import gpflow\n",
@@ -15,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import get_history as gh"
@@ -24,7 +47,9 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import feather\n",
@@ -34,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def gather_cols(params, indices, name=None):\n",
@@ -182,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -378,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##need to reformat history\n",
@@ -396,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "history = gh.get_history(8,100,5)\n"
@@ -405,7 +438,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = put_x_together(history)\n"
@@ -414,7 +449,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = np.array(X)\n"
@@ -423,7 +460,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n"
@@ -453,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "users = np.array([[float(X[i][8]==X[j][8]) for j in range(100)] for i in range(100)])\n"
@@ -462,7 +503,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def rbf_custom_np( X, X2=None):\n",
@@ -481,14 +524,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = np.array([[float(r)] for r in history.rewards])\n"
@@ -745,7 +792,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "trm = term.eval(session=sess)\n"
@@ -754,7 +803,9 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "learned_s_theta = m.kern.sigma_theta.value"
@@ -872,7 +923,9 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def obtain_kernel_and_sigma_u(all_xs,all_ys):\n",
@@ -995,7 +1048,9 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_RT(y,X,sigma_theta):\n",
@@ -1007,7 +1062,9 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r_adjusted = get_RT(y,X,sigma_theta)"
@@ -1016,14 +1073,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_H():\n",
@@ -1035,7 +1096,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_MT(new_x,sigma_theta,sigma_u,sigma_v,history,H):\n",
@@ -1073,7 +1136,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "    sigma_theta = np.array([[1.1, 0.1, 0.1, 0.1, 0.1, 0.1],\n",
@@ -1092,7 +1157,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('testX.pkl','rb') as f:\n",
@@ -1318,7 +1385,9 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_MS = [get_MT(x,sigma_theta,sigma_u,sigma_v,X,create_H()) for x in X]\n"
@@ -1327,7 +1396,9 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#all_MS[0]"
@@ -1359,7 +1430,9 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.DataFrame(X,columns=['f_1','f_2','f_3','f_4','f_5','f_6','g_1','g_2','user_id','user_day_id'])\n",
@@ -1373,14 +1446,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#path = 'adjusted_R.feather'\n",
@@ -1425,7 +1502,9 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas"
@@ -1458,7 +1537,9 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -1469,7 +1550,9 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_rewardsa = pd.DataFrame(trm,columns=['u_{}'.format(i) for i in range(100)])\n",
@@ -1480,7 +1563,9 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "learned_s_theta = m.kern.sigma_theta.value\n",
@@ -1492,7 +1577,9 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "learned_s_u = m.kern.sigma_u.value\n",
@@ -1504,7 +1591,9 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "learned_s_v = m.kern.sigma_v.value\n",
@@ -1536,7 +1625,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "    def rbf_custom( X, X2=None):\n",
@@ -1597,7 +1688,9 @@
   {
    "cell_type": "code",
    "execution_count": 521,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_all_sigmas(sigma_v,g_one,g_two,day_one,day_two):\n",
@@ -1733,7 +1826,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "g_two=g_one\n",
@@ -1743,7 +1838,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ts = tf.stack([day_one,day_two],axis=1)"
@@ -1775,14 +1872,18 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1809,14 +1910,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 433,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sigma_theta =tf.constant(np.array([[100.0,10.0,10.0],[10.0,100.0,10.0],\\\n",
@@ -1918,7 +2023,9 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = np.vstack([np.random.randn(10,2) + [2,2],\n",
@@ -1949,7 +2056,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " #.eval(session=sess) \n",
@@ -2005,7 +2114,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -2016,7 +2127,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -2027,7 +2140,9 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_rewardsa = pd.DataFrame(all_MS[0],columns=['p_1','p_2','p_3','p_4','p_5','p_6'])\n",
@@ -62057,7 +62172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -62078,7 +62195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
