backing up to be able to pull

--- a/pooling-service/sabina_tmp/in_progress/make_new_kernel_gpflow_experiment.ipynb
+++ b/pooling-service/sabina_tmp/in_progress/make_new_kernel_gpflow_experiment.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import feather\n",
+    "#import feather\n",
     "import pandas as pd"
    ]
   },
@@ -421,27 +421,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'users' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-ecac3025b76d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'users' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "users\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [],
    "source": [
     "users = np.array([[float(X[i][8]==X[j][8]) for j in range(100)] for i in range(100)])\n"
@@ -449,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -578,9 +557,9 @@
       "baselines\n",
       "(100, 6)\n",
       "sigma theta\n",
-      "Tensor(\"CustomKernel-6d3ce682-0/sigma_theta/MatrixDiag:0\", shape=(1, 6, 6), dtype=float64)\n",
-      "Tensor(\"GPR-900ce15a-9/likelihood_1/Tensordot_1:0\", shape=(100, ?), dtype=float64)\n",
-      "Tensor(\"CustomKernel-6d3ce682-0/sigma_u/MatrixDiag:0\", shape=(1, 2, 2), dtype=float64)\n",
+      "Tensor(\"CustomKernel-407d6928-0/sigma_theta/MatrixDiag:0\", shape=(1, 6, 6), dtype=float64)\n",
+      "Tensor(\"GPR-bdb8d483-9/likelihood_1/Tensordot_1:0\", shape=(100, ?), dtype=float64)\n",
+      "Tensor(\"CustomKernel-407d6928-0/sigma_u/MatrixDiag:0\", shape=(1, 2, 2), dtype=float64)\n",
       "r\n",
       "(100, 100)\n"
      ]
@@ -589,8 +568,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:gpflow.logdensities:Shape of x must be 2D at computation.\n",
-      "WARNING:gpflow.logdensities:Shape of mu may be unknown or not 2D.\n"
+      "WARNING:gpflow.logdensities:Shape of x must be 2D at computation.\n"
      ]
     }
    ],
@@ -602,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -611,9 +589,9 @@
      "text": [
       "INFO:tensorflow:Optimization terminated with:\n",
       "  Message: b'CONVERGENCE: NORM_OF_PROJECTED_GRADIENT_<=_PGTOL'\n",
-      "  Objective function value: 512.983239\n",
-      "  Number of iterations: 170\n",
-      "  Number of functions evaluations: 202\n"
+      "  Objective function value: 547.562347\n",
+      "  Number of iterations: 47\n",
+      "  Number of functions evaluations: 50\n"
      ]
     },
     {
@@ -622,9 +600,9 @@
      "text": [
       "INFO:tensorflow:Optimization terminated with:\n",
       "  Message: b'CONVERGENCE: NORM_OF_PROJECTED_GRADIENT_<=_PGTOL'\n",
-      "  Objective function value: 512.983239\n",
-      "  Number of iterations: 170\n",
-      "  Number of functions evaluations: 202\n"
+      "  Objective function value: 547.562347\n",
+      "  Number of iterations: 47\n",
+      "  Number of functions evaluations: 50\n"
      ]
     }
    ],
@@ -634,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +664,7 @@
        "      <td>True</td>\n",
        "      <td>(1, 6, 6)</td>\n",
        "      <td>True</td>\n",
-       "      <td>[[[1e-06, 0.0, 0.0, 0.0, 0.0, 0.0], [0.0, 1e-0...</td>\n",
+       "      <td>[[[198763.5153084304, 0.0, 0.0, 0.0, 0.0, 0.0]...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GPR/kern/sigma_u</th>\n",
@@ -696,7 +674,7 @@
        "      <td>True</td>\n",
        "      <td>(1, 2, 2)</td>\n",
        "      <td>True</td>\n",
-       "      <td>[[[1e-06, 0.0], [0.0, 1e-06]]]</td>\n",
+       "      <td>[[[66132.81169998717, 0.0], [0.0, 110883.10359...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GPR/kern/sigma_v</th>\n",
@@ -706,7 +684,7 @@
        "      <td>True</td>\n",
        "      <td>(1, 2, 2)</td>\n",
        "      <td>True</td>\n",
-       "      <td>[[[1e-06, 0.0], [0.0, 1e-06]]]</td>\n",
+       "      <td>[[[9134.279917383235, 0.0], [0.0, 18830.189716...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GPR/likelihood/variance</th>\n",
@@ -716,7 +694,7 @@
        "      <td>True</td>\n",
        "      <td>()</td>\n",
        "      <td>True</td>\n",
-       "      <td>866.998483717109</td>\n",
+       "      <td>2637.9201231675447</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -739,13 +717,13 @@
        "\n",
        "                                                                     value  \n",
        "GPR/kern/noise           [[[1e-06, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0...  \n",
-       "GPR/kern/sigma_theta     [[[1e-06, 0.0, 0.0, 0.0, 0.0, 0.0], [0.0, 1e-0...  \n",
-       "GPR/kern/sigma_u                            [[[1e-06, 0.0], [0.0, 1e-06]]]  \n",
-       "GPR/kern/sigma_v                            [[[1e-06, 0.0], [0.0, 1e-06]]]  \n",
-       "GPR/likelihood/variance                                   866.998483717109  "
+       "GPR/kern/sigma_theta     [[[198763.5153084304, 0.0, 0.0, 0.0, 0.0, 0.0]...  \n",
+       "GPR/kern/sigma_u         [[[66132.81169998717, 0.0], [0.0, 110883.10359...  \n",
+       "GPR/kern/sigma_v         [[[9134.279917383235, 0.0], [0.0, 18830.189716...  \n",
+       "GPR/likelihood/variance                                 2637.9201231675447  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
