--- a/pooling-service/sabina_tmp/in_progress/check_gpytorch.ipynb
+++ b/pooling-service/sabina_tmp/in_progress/check_gpytorch.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import gpytorch\n",
-    "import pyreadr"
+    "import pyreadr\n",
+    "import pooling_params as gtp"
    ]
   },
   {
@@ -58,127 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[50.48819812299572, 21.4067947507671, 11.034266531379169, 1],\n",
-       " [29.072913251360006, 10.864111756044787, 9.157409644080198, 0],\n",
-       " [19.72151143977225, 16.574382980939816, 6.384807225215175, 0],\n",
-       " [58.955879791691295, 29.95418530156661, 16.204187547715307, 1],\n",
-       " [26.558280328691005, 24.632457374492752, 10.855919944711799, 1],\n",
-       " [50.27819525344297, 8.68966683461432, 16.805821100862165, 1],\n",
-       " [35.61412445900078, 2.4178714170317672, 10.399187863781648, 0],\n",
-       " [50.818128291303054, 18.67466494540439, 17.55508523285537, 1],\n",
-       " [10.880605888946306, 13.505974845324346, 2.899986191808268, 1],\n",
-       " [58.06879377132598, 4.589052572403278, 6.959959287973357, 1],\n",
-       " [46.85109087961443, 26.156931930225632, 17.0990004030693, 1],\n",
-       " [20.191725576491024, 7.079721544921794, 1.2598801789139902, 1],\n",
-       " [36.94842528797375, 6.8397954964668255, 1.4399838438471413, 1],\n",
-       " [46.99003305550332, 1.0881522153308998, 11.635545364324816, 1],\n",
-       " [29.254367707132538, 13.871893393527868, 3.693564202494195, 0],\n",
-       " [14.184938001738093, 4.796055355508958, 9.456879173512888, 0],\n",
-       " [43.78944445751729, 29.668622361364456, 4.049905012595902, 1],\n",
-       " [23.65841687601206, 1.7379619173537786, 8.152120371006134, 1],\n",
-       " [44.990250228376176, 19.997340345310814, 2.047625597723368, 0],\n",
-       " [42.508883837144495, 16.91314156785837, 7.502627073466284, 1],\n",
-       " [21.924450354083493, 20.055933550796365, 10.619350527544501, 0],\n",
-       " [15.496063812765783, 26.75464235696011, 12.758025029448309, 1],\n",
-       " [30.93956000808347, 1.0001632097013535, 12.865032182751012, 0],\n",
-       " [31.555427267400923, 16.0881875528415, 19.567374006079888, 1],\n",
-       " [52.2680335883654, 25.45185916710554, 17.903799533052634, 1],\n",
-       " [28.696399805047704, 19.210433740725897, 8.537303365296143, 0],\n",
-       " [37.403965419644365, 23.6111990118618, 1.6008094783563975, 0],\n",
-       " [53.15808891450833, 9.598553145762066, 4.44597757508526, 0],\n",
-       " [22.483072668523, 23.44898142756023, 0.3810208195247422, 0],\n",
-       " [27.882627396978997, 23.327295223131074, 1.0879640682114666, 0],\n",
-       " [22.449471898228104, 1.473519655513098, 15.182238856691342, 1],\n",
-       " [40.105538767100455, 18.241261555578923, 5.171745308327546, 0],\n",
-       " [14.269984789555275, 7.504954764925476, 2.3837191924203527, 1],\n",
-       " [25.15635125904621, 27.09423645124078, 4.069562670204214, 0],\n",
-       " [17.425367527636862, 6.6169273037776986, 18.571241746061542, 0],\n",
-       " [11.272552141774558, 0.5686308144375263, 14.57352420343247, 1],\n",
-       " [37.10717252552112, 12.502391164483539, 17.67103484317142, 0],\n",
-       " [50.721315401835284, 2.0616639697279115, 7.907704394409603, 0],\n",
-       " [48.8950492603572, 1.173681151456446, 18.334909969708814, 1],\n",
-       " [44.185562427908664, 18.31529140874567, 2.224970165151905, 1],\n",
-       " [47.27419748428231, 3.913740789571051, 3.7506963740398525, 1],\n",
-       " [57.57214140667529, 0.8750724151095357, 4.795664366300878, 0],\n",
-       " [44.274779392772956, 11.60643371235967, 7.020285376650783, 1],\n",
-       " [53.137743501347856, 20.639427929401567, 11.897290610064752, 0],\n",
-       " [30.57374022335448, 8.257387622618932, 12.188460218556024, 0],\n",
-       " [31.89338597198119, 8.527118850903918, 4.081374780063991, 1],\n",
-       " [37.25125910253256, 3.7649310502847513, 0.5615890722672101, 0],\n",
-       " [46.909420752907145, 22.500181237632262, 12.274217435069856, 1],\n",
-       " [38.24130732805298, 14.27358095161259, 0.7213046489322372, 0],\n",
-       " [26.809501075125116, 21.517073787388576, 16.955798309349213, 1],\n",
-       " [31.286772173868883, 27.81376879111446, 6.967893444494912, 1],\n",
-       " [41.47022807178551, 5.053414006974276, 19.07151689774692, 1],\n",
-       " [41.934896779907476, 4.174960320074118, 3.9547310706648786, 0],\n",
-       " [15.942635599268536, 0.741701812783413, 3.736153034707681, 1],\n",
-       " [46.32760394651274, 14.222960540472727, 12.119184616208978, 1],\n",
-       " [45.09253718032983, 13.704619427818214, 8.131112548515617, 1],\n",
-       " [52.9323235612056, 15.432166133464298, 9.931723409876124, 0],\n",
-       " [55.838754184939575, 26.729067871809352, 13.554853656136924, 0],\n",
-       " [56.10455523923912, 17.026959731238943, 11.246206719942203, 0],\n",
-       " [56.12699464249378, 20.578090542226366, 16.458207375200978, 0],\n",
-       " [41.66687260896829, 8.454120718544699, 16.36508540629745, 0],\n",
-       " [12.57904048395325, 14.127497121354171, 3.3553289146584375, 0],\n",
-       " [55.36581933485162, 27.70545032269234, 16.08539769915754, 0],\n",
-       " [55.9362013137306, 12.581967331697063, 19.813326997847692, 0],\n",
-       " [49.947455524743525, 24.529746768601495, 13.790413483397725, 0],\n",
-       " [35.152878314288316, 21.472920858530564, 14.09401522367937, 1],\n",
-       " [40.08918794045612, 27.652208417326367, 15.716317218402336, 1],\n",
-       " [31.4912528288914, 26.094455499505873, 16.13927648612422, 1],\n",
-       " [12.810388238865642, 10.33007344686673, 6.343140196383632, 0],\n",
-       " [37.88306541205782, 27.345735972174083, 16.691384624012674, 1],\n",
-       " [55.61707705419991, 3.3528052210021664, 1.7683120279308406, 0],\n",
-       " [28.727930442355046, 2.4585874733739232, 7.760079293370459, 0],\n",
-       " [37.216834793268305, 28.98744341082111, 3.16397898077311, 0],\n",
-       " [26.44016908908725, 7.056020752395584, 16.76616655761937, 0],\n",
-       " [12.702743093129556, 12.852019484646876, 8.981808807101954, 0],\n",
-       " [34.50573095257626, 25.685618009550193, 19.92422009231953, 0],\n",
-       " [41.58865070903365, 0.921637098245961, 15.281521061855702, 0],\n",
-       " [32.67573265172072, 28.20695852502698, 18.09598941794622, 0],\n",
-       " [59.65637285402313, 2.855160425940657, 11.128440149964627, 0],\n",
-       " [35.513853802452786, 19.621653126759977, 15.577070876353691, 0],\n",
-       " [56.073841335944934, 0.8794457663930777, 15.131383237040328, 0],\n",
-       " [36.50769524051269, 1.0136371778723596, 4.801915327413864, 1],\n",
-       " [12.740752131482104, 21.607162702700947, 4.739058494977392, 0],\n",
-       " [41.83304220145598, 27.47904127433361, 0.5381276795069923, 0],\n",
-       " [51.43926914128737, 14.836638860109199, 8.57808999517898, 0],\n",
-       " [37.45009857110209, 29.917617747825933, 15.111737086898243, 1],\n",
-       " [45.70137081599093, 25.65726225479088, 17.141019511736875, 1],\n",
-       " [32.21753394651401, 25.9165611751609, 1.5578499097448306, 1],\n",
-       " [31.926293356863408, 22.348815646505884, 9.361431523913346, 0],\n",
-       " [48.77331065303402, 7.117004937208478, 5.392955016899337, 1],\n",
-       " [50.21989620211385, 16.81957307453863, 14.71655617282588, 1],\n",
-       " [50.54074366448008, 5.653430948845116, 3.0794687037645208, 1],\n",
-       " [54.52446507843482, 22.20189471957678, 15.301305235276681, 1],\n",
-       " [43.98509162678816, 10.850766934119756, 16.965575799276838, 0],\n",
-       " [35.00426481046209, 1.73550354136922, 4.394431185986461, 0],\n",
-       " [54.28074607308681, 10.285102262819603, 9.024870933635345, 0],\n",
-       " [13.094649314491853, 2.616708526947348, 16.72827509896386, 0],\n",
-       " [55.833587033923976, 11.57169871676639, 6.817018052953745, 0],\n",
-       " [12.690112358842923, 28.54209994095902, 15.930061045561086, 1],\n",
-       " [52.16699251075055, 12.474929193337323, 13.789187681954076, 0]]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def initialize_policy_params_TS(experiment,update_period,\\\n",
-    "                                standardize=False,baseline_features=None,psi_features=None,\\\n",
-    "                                responsivity_keys=None,algo_type=None):\n",
+    "def initialize_policy_params_TS(standardize=False,baseline_features=None,psi_features=None,\\\n",
+    "                                responsivity_keys=None):\n",
     "    #,'location_1','location_2','location_3'\n",
     "    #'continuous_temp',\n",
     "    global_p =gtp.TS_global_params(21,baseline_features=baseline_features,psi_features=psi_features, responsivity_keys= responsivity_keys)\n",
-    "    personal_p = pp.TS_personal_params()\n",
+    "    #personal_p = pp.TS_personal_params()\n",
     "    #global_p =gtp.TS_global_params(10,context_dimension)\n",
     "    \n",
     "    \n",
@@ -200,12 +90,10 @@
     "    \n",
     "    #print(global_p.psi_indices )\n",
     "    \n",
-    "    global_p.update_period = update_period\n",
+    "    #global_p.update_period = update_period\n",
     "    \n",
     "    global_p.standardize = standardize\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    initial_context = [0 for i in range(global_p.theta_dim)]\n",
     "    \n",
     "    global_p.mus0= global_p.get_mu0(initial_context)\n",
@@ -219,41 +107,43 @@
     "    global_p.sigmas1= global_p.get_asigma(global_p.num_baseline_features+1)\n",
     "    global_p.sigmas2= global_p.get_asigma( global_p.num_responsivity_features+1)\n",
     "    \n",
-    "    #4.83\n",
+    "\n",
     "    global_p.mu2_knot = np.array([0]+[0 for i in range(global_p.num_responsivity_features)])\n",
     "    global_p.mu1_knot = np.zeros(global_p.num_baseline_features+1)\n",
     "    global_p.sigma1_knot = np.eye(global_p.num_baseline_features+1)\n",
     "    global_p.sigma2_knot = np.eye(global_p.num_responsivity_features+1)\n",
-    "    #print(type(personal_p))\n",
-    "    \n",
-    "    for person in experiment.population.keys():\n",
-    "        #experiment.population[person].root = '../../regal/murphy_lab/pooling/distributions/'\n",
-    "        initial_context = [0 for i in range(global_p.theta_dim)]\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        if algo_type!='batch':\n",
-    "            personal_p.mus0[person]= global_p.get_mu0(initial_context)\n",
-    "            personal_p.mus1[person]= global_p.get_mu1(global_p.num_baseline_features)\n",
-    "            personal_p.mus2[person]= global_p.get_mu2(global_p.num_responsivity_features)\n",
-    "            \n",
-    "            personal_p.sigmas0[person]= global_p.get_asigma(len( personal_p.mus0[person]))\n",
-    "            personal_p.sigmas1[person]= global_p.get_asigma(global_p.num_baseline_features+1)\n",
-    "            personal_p.sigmas2[person]= global_p.get_asigma( global_p.num_responsivity_features+1)\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        personal_p.batch[person]=[[] for i in range(len(experiment.person_to_time[person]))]\n",
-    "        personal_p.batch_index[person]=0\n",
-    "        \n",
-    "        #personal_p.etas[person]=eta.eta()\n",
-    "        \n",
-    "        personal_p.last_update[person]=experiment.person_to_time[person][0]\n",
     "\n",
-    "\n",
-    "    return global_p ,personal_p"
+    "    return global_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glob = initialize_policy_params_TS(standardize=False,baseline_features=[i for i in range(4)],psi_features=[],responsivity_keys=[i for i in range(4)])\n",
+    "               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 5]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.psi_indices"
    ]
   },
   {
