--- a/pooling-service/sabina_tmp/in_progress/check_runner.ipynb
+++ b/pooling-service/sabina_tmp/in_progress/check_runner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,8 @@
     "import run_gpytorchkernel\n",
     "import simple_bandits\n",
     "from sklearn import preprocessing\n",
-    "import R_to_python_functions"
+    "import R_to_python_functions\n",
+    "import json"
    ]
   },
   {
@@ -56,16 +57,24 @@
     }
    ],
    "source": [
-    "os.getcwd()"
+    "def main(data_path):\n",
+    "    result = pyreadr.read_r(data_path)\n",
+    "    baseline_features = ['temperature', 'logpresteps', 'sqrt.totalsteps',\\\n",
+    "                         'dosage', 'engagement', 'work.location', 'other.location', 'variation']\n",
+    "    responsivity_features = ['dosage', 'engagement', 'work.location', 'other.location', 'variation']\n",
+    "    data_dict = process_data(result['train.dat'],baseline_features)\n",
+    "    standard_x = get_standard_x(data_dict['data'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "result = pyreadr.read_r('../../data/train_EB.RData')"
+    "data_path = '../../data/train_EB.RData'"
    ]
   },
   {
@@ -80,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "baseline_features = ['temperature', 'logpresteps', 'sqrt.totalsteps',\\\n",
@@ -91,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_standard_x(X):\n",
@@ -198,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_phi(standard_x,all_dict,baseline_indices,responsivity_indices):\n",
@@ -226,7 +241,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_dict = process_data(result['train.dat'],baseline_features)\n",
@@ -236,7 +253,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X,y,users = get_phi(standard_x,data_dict,[i for i in range(len(baseline_features))],\\\n",
@@ -267,7 +286,9 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "glob = initialize_policy_params_TS(standardize=False,baseline_features=[i for i in range(len(baseline_features))],psi_features=[],responsivity_keys=[i for i in range(3,len(baseline_features))])\n",
@@ -338,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp_params = run_gpytorchkernel.run(X, users,y,glob)"
@@ -347,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "inv_term = simple_bandits.get_inv_term(temp_params['cov'],X.shape[0],temp_params['noise'])\n",
@@ -372,7 +397,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp = simple_bandits.calculate_posterior_faster(glob,\\\n",
